# BullseyeGolf-server

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.test  README.md  app.py  bullseyegolf-server.service  dataclass-backup.py  dataclass.py  docker-compose-lighttpd.yml  docker-compose.yml  docker-compose.yml.test  openapi.yaml  production_mode.sh  requirements.txt  setup.cfg  test_mode.sh  tutorial.md
DB/: hole_five.json  hole_three.json  hole_two.json
nginx/: Dockerfile
nginx/config/: common_location.conf  dhparams.pem  nginx.conf  scgi_params
nginx/config/conf.d/: api.conf  default.conf
src/bgserver/: __init__.py  dataclass.py  generate_key.py  old__init__.py  resources.py  routes.py
src/bgserver/database/: models.py
src/bgserver/resources/: resources.py  routes.py
src/bgserver/users/: create_user.py  delete_user.py  reset_key.py
src/gpserver/: __init__.py  dataclass.py  new_dataclass.py
