[metadata]
name = bgserver
version = 1.1.0beta
author = Ava Drumm
author_email = lmbdrumm@gmail.com
description = BullseyeGolf API server written with flask
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/itzgoldenleonard/BullseyeGolf-server
project_urls = 
    Bug Tracker = https://github.com/itzgoldenleonard/BullseyeGolf-server/issues
classifiers = 
    Development Status :: 4 - Beta
    Framework :: Flask
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: POSIX
    Programming Language :: Python :: 3.9

[options]
package_dir = 
    = src
packages = find:
install_requires = 
    flask>=2
    flask-cors
    dataclasses-json
    flask-restful
python_requires = >=3.9

[options.packages.find]
where = src
